# parallax-view-portal

./: .gitignore  README.md  plan.md
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/: App.tsx  index.css
apps/web/src/AssetLoader/: index.ts
apps/web/src/FaceTracking/: index.ts
apps/web/src/OffAxisCamera/: index.ts
apps/web/src/Scene/: LayeredDepthPlane.ts  ParallaxPlane.ts  ThreeCanvas.tsx  index.ts
apps/web/src/UI/: AssetButton.tsx  AssetPanel.tsx  DebugOverlay.tsx  DesktopOnly.tsx  SettingsButton.tsx  SettingsPanel.tsx  TrackingStatus.tsx  WebcamPrompt.tsx  index.ts
apps/web/src/api/: index.ts
apps/web/src/hooks/: useWebcam.ts
apps/web/src/store/: index.ts
services/api/: README.md  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/models/: __init__.py  job.py
services/api/app/routes/: __init__.py  assets.py  jobs.py
services/api/app/services/: __init__.py  database.py  processor.py
services/api/app/storage/: __init__.py  local.py
services/api/data/: jobs.db
